--- a/Changes
+++ b/Changes
@@ -1,6 +1,17 @@
 Revision history for Perl extension Acme-CXW-vars-i
 
 {{$NEXT}}
+    - Switched to Minilla for maintenance
 
-    - original version
+1.03    2019-03-27
+    - Prohibit special names
+    - 100% test coverage!
 
+1.02-TRIAL  2019-03-25
+    - Update to run on Perl 5.22+
+
+1.01    2003-11-03
+    - original version; created by ExtUtils::ModuleMaker 0.32
+    - injected http://perlmonks.org/index.pl?node_id=264096
+    - wrote tests
+    - uploaded to cpan (finally)
