--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl distribution vars-i
 
 {{$NEXT}}
+    - Updated documentation
 
 1.06 2019-05-15T14:05:21Z (TRIAL RELEASE)
     - Fixed metadata
